@@ -387,6 +387,18 @@ public:
    */
   virtual bool GetGreenfield (void) const;
   /**
+   * Enable or disable short PLCP preamble.
+   *
+   * \param sets short PLCP preamble is supported or not
+   */
+  virtual void SetShortPlcpPreamble (bool preamble);
+  /**
+   * Return whether short PLCP preamble is supported.
+   *
+   * \returns if short PLCP preamble is supported or not
+   */
+  virtual bool GetShortPlcpPreamble (void) const;
+  /**
    * Return channel width.
    *
    * \return channel width
@@ -528,7 +540,7 @@ private:
   bool     m_greenfield;            //!< Flag if GreenField format is supported
   bool     m_guardInterval;         //!< Flag if short guard interval is used
   uint32_t m_channelWidth;          //!< Channel width
-
+  bool     m_plcpPreamble;          //!< Flag if short PLCP preamble is used
 
   /**
    * This vector holds the set of transmission modes that this
